language/move-lang/tests/move_check/typing/borrow_local_temp_resource.exp
error: 

   ┌── tests/move_check/typing/borrow_local_temp_resource.move:7:17 ───
   │
 7 │         &mut R{};
   │                 ^ Invalid return
   ·
 6 │         &R{};
   │          --- The value is created but not used. The value does not have the 'drop' ability and must be consumed before the function returns
   ·
 6 │         &R{};
   │          --- The type '0x8675309::M::R' does not have the ability 'drop'
   ·
 3 │     struct R {}
   │            - To satisfy the constraint, the 'drop' ability would need to be added here
   │

error: 

   ┌── tests/move_check/typing/borrow_local_temp_resource.move:7:17 ───
   │
 7 │         &mut R{};
   │                 ^ Invalid return
   ·
 7 │         &mut R{};
   │              --- The value is created but not used. The value does not have the 'drop' ability and must be consumed before the function returns
   ·
 7 │         &mut R{};
   │              --- The type '0x8675309::M::R' does not have the ability 'drop'
   ·
 3 │     struct R {}
   │            - To satisfy the constraint, the 'drop' ability would need to be added here
   │

